--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.0",
     "koa-bodyparser": "^4.3.0",
+    "koa-cors": "0.0.16",
     "koa-router": "^9.4.0",
     "koa-static": "^5.0.0",
     "mongodb": "^3.6.0",
