--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "babel koa/src -d koa/build/ --source-maps && node koa/build/app.js"
+    "dev": "babel koa/src -d koa/build/ && node koa/build/app.js",
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
@@ -28,6 +29,9 @@
     "@babel/plugin-transform-runtime": "^7.11.0",
     "@babel/preset-env": "^7.11.0",
     "@types/jsonwebtoken": "^8.5.0",
-    "@types/koa-bodyparser": "^4.3.0"
+    "@types/koa-bodyparser": "^4.3.0",
+    "babel-loader": "^8.1.0",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12"
   }
 }
