--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "koa-router": "^9.4.0",
     "koa-static": "^5.0.0",
     "mongodb": "^3.6.0",
-    "node-rsa": "^1.1.1"
+    "node-rsa": "^1.1.1",
+    "qiniu": "^7.3.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.5",
